tweak for survey activity slides

--- a/2021/materials/day4-surveys/activity/intro-to-activity.tex
+++ b/2021/materials/day4-surveys/activity/intro-to-activity.tex
@@ -526,7 +526,7 @@ Our recommended work flow:
 This activity is our attempt to cover as much of surveys as we can given the constraints of the virtual learning
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
+\begin{frame}{Information for SICSS-Princeton}
 
 Let's get started 
 \begin{itemize}
